# AsteroidOS-terminal

./: CMakeLists.txt  asteroid-terminal.desktop.template  asteroid-terminal.desktop.temple  runscript.in
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  main.cpp  main.qml
